# Entropic

./: .gitignore  CHANGELOG.md  CLAUDE.md  Convert-MD-to-PDF.ps1  Entropic.Requirements.md  Entropic.StatusReport.json  Find-EnvironmentVariables.ps1  Find-Fakes.ps1  Find-Files.ps1  Find-TODOs.ps1  HISTORY.md  HOOKS-codex.md  Hexagon.md  Launch-TodoMonitor.ps1  README.Architecture.md  README.Data.md  README.Deploy.md  README.Functional.md  README.Security.md  README.Technical.md  README.Vision.md  README.md  Structure.md  TODO.md  entropic.json  musttest-implementations.json  test-rename.txt  test_go_ffi_simple.go
.recode/get-recap/: recap.md
Context7/: context7_launcher.py
MagicStrings/: Find-MagicStrings.ps1  find-magic-strings.ps1  replace-magic-strings.ps1
PolyScript/: .gitignore  CrossPlatform_Development_Paper.md  DeveloperGuide.md  INSTALLATION.md  Note.Bloat.md  Note.Compiled.DDD.md  POLYSCRIPT_IMPLEMENTATION.md  Plan.Full.Foundation.md  Plan.PolyScript.md  Plan.libpolyscript.md  PolyScript_Framework.md  Progress.PolyScript.20250106_200000.md  README.md  STARTHERE.md  TechnicalGuide.md  UserGuide.md  example_polyscript_compliant.py  install_libpolyscript.sh  polyscript.ps1  polyscript_validator.py  setup_polyscript_env.sh  test_all_frameworks.sh  test_frameworks_simple.sh
PolyScript/PolyScript.NET/: PolyScriptContext.cs
PolyScript/Prompts/: Prompt.Audit.Design.md  Prompt.Audit.Requirements.md  Prompt.Audit.Versions.md  Prompt.Cleanup.md  Prompt.Continue.md  Prompt.Critique.md  Prompt.Errors.md  Prompt.TODO.md  Prompt.Tests.md
PolyScript/archive/: CROSS_LANGUAGE_CLI_FRAMEWORK.md  MODE_COMPARISON.md  NAMING_ANALYSIS.md  POLYSCRIPT_DESIGN.md  POLYSCRIPT_VALIDATOR_README.md  PolyScript_Migration_Guide.md  README_PolyScript_Frameworks.md  SCRIPT_FRAMEWORK_PROPOSAL.md  SCRIPT_MODES_SUMMARY.md
PolyScript/audits/: Audit-Summary.md  CSharp-Audit.md  FSharp-Audit.md  Python-Audit.md  Rust-Audit.md
PolyScript/design/: Architecture.md  ComplianceChecklist.md  Context.md  LanguageIntegration.md  LibraryDesign.md  Plan.libpolyscript.VERIFIED.md  Plan.libpolyscript.md  Requirements.md  Specification.md  Structure.md  Vision.md
PolyScript/frameworks/haskell/: .gitignore  PolyScriptFramework.hs  TestCompiler.hs  polyscript-framework.cabal
PolyScript/frameworks/haskell/PolyScript/: Framework.hs
PolyScript/frameworks/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
PolyScript/frameworks/haskell/dist-newstyle/packagedb/ghc-9.12.2/: package.cache  polyscript-framework-0.1.0.0-inplace.conf
PolyScript/frameworks/rust/: .gitignore  Cargo.toml  benchmark_ffi.rs  polyscript_framework.rs
PolyScript/libpolyscript/: CMakeLists.txt  polyscript.pc
PolyScript/libpolyscript/include/polyscript/: context.hpp  discovery.hpp  modes.hpp  operations.hpp  polyscript.hpp
PolyScript/libpolyscript/src/: context.cpp  discovery.cpp  modes.cpp  operations.cpp  polyscript.cpp
PolyScript/libpolyscript/tests/: CMakeLists.txt  test_c_interface.c  test_modes.cpp  test_operations.cpp
bash/: todo_hook_post_tool.ps1  todo_hook_post_tool.sh  todo_live_monitor.ps1
claude/: CLAUDEHISTORY.md  Check-Claude-Usage.ps1  Find-Personal-Info.ps1  Fix-ClaudeCode-Universal-Spectre.ps1  Fix-ClaudeCode-Universal.ps1  Fix-ClaudeCode-WSL2.ps1  Fix-ClaudeCode-Windows.ps1  Fix-ClaudeCode.ps1  Fix-ClaudeHistoryScript.ps1  Get-ClaudeProjectHistory-Simple.ps1  Get-ClaudeProjectHistory.ps1  Install-ClaudeCode-MCPs.ps1  README.md  test-content-item.ps1  test-jsonl.ps1  test-newtonsoft.ps1
git-analysis/: README.md  batch_check_commits.sh  batch_check_commits_days.sh  batch_check_commits_days_fast.sh  find_large_deletions.py  find_large_deletions.sh  find_large_deletions_gh.py
mcp/: Claude_Code_MCP_Configuration_Guide.md  Debug-Context7-MCP-WSL2-Ubuntu.ps1  Debug-Context7-MCP-Windows.ps1  Debug-Context7-MCP-macOS.ps1  Install-ClaudeCode-MCPs.ps1  KNOWN_LIMITATIONS.md  MCP_Ecosystem.md  MCP_Known_Issues.md  README.md  claude_config_manager.py  context7-launcher.sh  install_mcp_servers.sh  install_mcp_servers_original.sh  manage_claude_code_mcp_servers.py  manage_claude_code_mcp_servers.py.backup  manage_mcp_servers_polyscript.py  mcp_servers.json  polyscript.py  test_claude_json_issues.py  test_concurrent_access.py  test_config_conflicts.py  test_config_manager_integration.py  test_manage_mcp_servers_polyscript.py  test_repair_empty_override.py  test_sandbox_negative_cases.py  test_windows_compatibility.py
network/: README.md  disable_ipv6.sh
powershell7/: configure_claude_hook.ps1  todo_hook_post_tool.ps1  todo_live_monitor.ps1  todo_live_monitor_spectre.ps1
typescript/: Build-ClaudeToDo.ps1  automated-filter-test.cjs  index.html  jest.config.js  package-lock.json  package.json  test-quick-verify.sh  tsconfig.main.json  tsconfig.preload.json  verify-provider-filtering.cjs
utilities/: README.md  find_size.py  test_api.py
wsl-setup/: Install-WSL2-DevEnvironment.ps1  README.md  setup_dev_environment_reference.py
(+529 files in other folders)
