cabal-version:      2.4
name:               polyscript-framework
version:            0.1.0.0
synopsis:           PolyScript Framework for Haskell
description:        CRUD × Modes Architecture: Zero-boilerplate CLI development
author:             Mathew Burkitt, Dimension Technologies
maintainer:         mathew.burkitt@ditech.ai
category:           Development
build-type:         Simple

library
    exposed-modules:  PolyScript.Framework
    build-depends:    base >=4.17.0.0 && <5,
                      aeson >= 2.0,
                      optparse-applicative >= 0.17,
                      containers >= 0.6,
                      text >= 1.2,
                      time >= 1.9,
                      bytestring >= 0.11
    hs-source-dirs:   .
    default-language: Haskell2010

executable test-compiler
    main-is:          TestCompiler.hs
    build-depends:    base >=4.17.0.0 && <5,
                      polyscript-framework,
                      aeson >= 2.0,
                      time >= 1.9,
                      text >= 1.2
    hs-source-dirs:   ../test
    default-language: Haskell2010